--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Raising Minds - Home</title>
+        <title>Raising Minds{% block title%}{% endblock %}</title>
         
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
@@ -14,7 +14,9 @@
         <link href="{% static 'app/images/RM-Icon.ico' %}" rel="icon">
 
         <!-- CSS -->
+        {% block CSS %}
         <link rel="stylesheet" type="text/css" href="{% static 'app/css/index.css' %}"/>
+        {% endblock %}
 
         
     </head>
@@ -57,6 +59,8 @@
             </div>
         </nav>
         <!-- End of Navigation bar -->
+
+        {% block content %}
 
         <!-- Hero Section -->
         <section id="hero" class="d-flex align-items-center">
@@ -183,6 +187,8 @@
     
           </div>
         </section><!-- End Counts Section -->
+
+        {% endblock %}
 
         <!-- ======= Footer ======= -->
         <footer id="footer">
