--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -1,56 +1,15 @@
+{% extends "app/index.html" %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Raising Minds - Projects</title>
+{% block title %} | Projects{% endblock %}
 
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+<!-- Css  -->
+{% block CSS %}
+  {{ block.super }}
+  <link rel="stylesheet" href="{% static 'app/css/projects.css' %}">
+{% endblock %}
 
-    <!-- Favicons -->
-    <link href="{% static 'app/images/RM-Icon.ico' %}" rel="icon">
 
-    <!-- Css  -->
-    <link rel="stylesheet" href="{% static 'app/css/projects.css' %}">
-</head>
-<body>
-    <!-- Navigation bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark px-0 py-3 alwaysTop" style="position: fixed; top: 0; left: 0; width: 100%;">
-        <div class="container">
-            <!-- Logo -->
-            <div class="fixedLogo">
-                <a href="#"><div class="logo" class="h-8 size bg-dark">Raising Minds</div></a>
-            </div>
-            <!-- Navbar toggle -->
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
-                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <!-- Collapse -->
-            <div class="collapse navbar-collapse backGround" id="navbarCollapse">
-                <!-- Nav -->
-                <div class="navbar-nav mx-lg-auto">
-                    <a class="nav-item nav-link" href="{% url 'index' %}" aria-current="page">Home</a>
-                    <a class="nav-item nav-link" href="#">About</a>
-                    <a class="nav-item nav-link active" href="{% url 'projects' %}">Projects</a>
-                    <a class="nav-item nav-link" href="#">Team</a>
-                    <a class="nav-item nav-link" href="#">Contact</a>
-                    <a class="nav-item nav-link" href="#">Community</a>
-                </div>
-
-                <!-- Donate button -->
-                <div class="d-flex align-items-lg-center mt-3 mt-lg-0">
-                    <a href="#" class="btn btnDonate-style btn-sm btn-primary w-full w-lg-auto custom-btn">
-                        Donate
-                    </a>
-                </div>
-            </div>
-        </div>
-    </nav>
-    <!-- End of navigation bar -->
-
+{% block content %}
 
     <!-- Hero Section -->
     <section id="hero" class="d-flex align-items-center">
@@ -277,5 +236,5 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
-</html>
+
+{% endblock %}
