--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -367,21 +367,21 @@
                 <div class="col-lg-2 col-md-6 footer-links">
                   <h4>Useful Links</h4>
                   <ul>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">About</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Projects</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Team</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Projects</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Contact</a></li>
                   </ul>
                 </div>
 
                 <div class="col-lg-3 col-md-6 footer-links">
                   <h4>Others</h4>
                   <ul>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Create School Profile</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Create Post</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-                    <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+                    <li><a href="#">Create School Profile</a></li>
+                    <li><a href="#">Create Post</a></li>
+                    <li><a href="#">Terms of service</a></li>
+                    <li><a href="#">Privacy policy</a></li>
                   </ul>
                 </div>
 
