--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -17,8 +17,10 @@
             <h1><span>Raising Minds </span> Projects</h1>
             <h2>Explore the impact of our commitment to education</h2>
             <div class="d-flex">
-              <a href="#ongoing" class="btn-get-started">Ongoing Projects</a> &nbsp;&nbsp;
-              <a href="#completed" class="btn-get-started">Completed Projects</a>
+              <!-- <a href="#ongoing" class="btn-get-started">Ongoing Projects</a> &nbsp;&nbsp; -->
+              <!-- <a href="#completed" class="btn-get-started">Completed Projects</a> -->
+              <button type="button" href="#ongoing" class="btn log-in btn-outline-primary">Ongoing Projects</button>  &nbsp;&nbsp;
+              <button type="button" href="#completed" class="btn log-in btn-outline-primary">Completed Projects</button>
             </div>
         </div>        
     </section>
