--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -240,6 +240,90 @@
           </div>
         </section><!-- End Ongoing Projects Section -->
 
+        <!-- ======= Team Section ======= -->
+      <section id="team" class="team section-bg">
+        <div class="container" data-aos="fade-up">
+
+          <div class="section-title">
+            <h2>Team</h2>
+            <p>At the heart of Rasing Minds, our diverse and passionate team brings together a wealth of expertise, united by a shared vision to make a meaningful impact in education and inspire positive change.</p>
+          </div>
+
+          <div class="row">
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+              <div class="member">
+                <div class="member-img">
+                  <img src="{% static "app/images/team-1.jpg" %}" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href="https://github.com/DulithaHarasara"><i class="fa fa-github"></i></a>
+                    <a href="https://www.facebook.com/dulitha.harasara"><i class="fa fa-facebook"></i>
+                    <a href="https://www.linkedin.com/in/dulitha-harasara-40b93322b/"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Dulitha Harasara</h4>
+                  <span>Chief Executive Officer</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+              <div class="member">
+                <div class="member-img">
+                  <img src="{% static "app/images/team-2.png" %}" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href="https://github.com/Malmi-Ameesha"><i class="fa fa-github"></i></a>
+                    <a href="https://www.facebook.com/malmi.ameesha.96?mibextid=PzaGJu"><i class="fa fa-facebook"></i></a>
+                    <a href="http://linkedin.com/in/malmee-ameesha-944b1022b"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Malmi Ameesha</h4>
+                  <span>Product Manager</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+              <div class="member">
+                <div class="member-img">
+                  <img src="{% static "app/images/team-3.jpg" %}" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href="https://github.com/MGKShavinda"><i class="fa fa-github"></i></a>
+                    <a href="https://www.facebook.com/kavindu.shavinda.10"><i class="fa fa-facebook"></i></a>
+                    <a href="https://www.linkedin.com/in/mgkshavinda/"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Kavindu Shavinda</h4>
+                  <span>CTO</span>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+              <div class="member">
+                <div class="member-img">
+                  <img src="{% static "app/images/team-4.png" %}" class="img-fluid" alt="">
+                  <div class="social">
+                    <a href="https://github.com/HeshithaSandeepa"><i class="fa fa-github"></i></a>
+                    <a href="https://www.facebook.com/heshitha.sandeepa.750/"><i class="fa fa-facebook"></i></a>
+                    <a href="www.linkedin.com/in/heshitha-sandeepa-8a225b24a"><i class="fa fa-linkedin"></i></a>
+                  </div>
+                </div>
+                <div class="member-info">
+                  <h4>Heshitha Sandeepa</h4>
+                  <span>Accountant</span>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+        </div>
+      </section><!-- End Team Section -->
+
         <!-- ======= Contact Section ======= -->
         <section id="contact" class="contact">
           <div class="container" data-aos="fade-up">
