--- a/RaisingMinds/app/templates/app/projects.html
+++ b/RaisingMinds/app/templates/app/projects.html
@@ -17,10 +17,8 @@
             <h1><span>Raising Minds </span> Projects</h1>
             <h2>Explore the impact of our commitment to education</h2>
             <div class="d-flex">
-              <!-- <a href="#ongoing" class="btn-get-started">Ongoing Projects</a> &nbsp;&nbsp; -->
-              <!-- <a href="#completed" class="btn-get-started">Completed Projects</a> -->
-              <button type="button" href="#ongoing" class="btn log-in btn-outline-primary">Ongoing Projects</button>  &nbsp;&nbsp;
-              <button type="button" href="#completed" class="btn log-in btn-outline-primary">Completed Projects</button>
+              <a href="#ongoing" class="btn-get-started">Ongoing Projects</a> &nbsp;&nbsp;
+              <a href="#completed" class="btn-get-started">Completed Projects</a>
             </div>
         </div>        
     </section>
@@ -235,7 +233,6 @@
           </div>
         </div>
       </section><!-- End Completed Projects Section -->
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
