--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -216,6 +216,9 @@
 
         <!-- Ongoing Projects Section -->
         <section class="projects" id="ongoing"  class="projects section-bg">
+
+          
+
           <div class="container" data-aos="fade-up">
 
             <div class="section-title">
@@ -224,30 +227,39 @@
             </div>
 
             <div class="row">
+
+              {% for post in post %}
+
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
                 <div class="icon-box">
                   <div class="project-image">
                     <img src="{% static "app/images/school.jpg" %}">
                   </div>
-                  <h4><a href="">Montessori in Kakirewa</a></h4>
+                  <h4><a href="">{{post.author.school_name}}</a></h4>
                   <p>Bogaswewa Samadhi Montessori with nearly 28 children had no place to learn.</p>
                   <div class="progressbar">
                     <h4>Progress</h4>
                     <div class="progress">
-                      <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100">35%</div>
+                      
+                      <div class="progress-bar" role="progressbar" style="width:{% widthratio post.current_amount post.donate_amount 100 %}%" aria-valuenow="{% widthratio post.current_amount post.donate_amount 100 %}" aria-valuemin="0" aria-valuemax="100">{% widthratio post.current_amount post.donate_amount 100 %}%</div>
+                      
                     </div>
                     <div class="row">
                       <div class="col-sm-6">
-                          <p>Goal : LKR 100000</p>
+                          <p>Goal : LKR {{post.donate_amount}}</p>
                       </div>
                       <div class="col-sm-6">
-                          <p>Current : LKR 35,000</p>
+                          <p>Current : LKR {{post.current_amount}}</p>
                       </div>
                   </div>
                   <button type="button" class="btn donate btn-outline-primary">Donate</button>
                 </div>
                 </div>
               </div>
+
+              {% endfor %}
+              
+              {% comment %}
 
               <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0" data-aos="zoom-in" data-aos-delay="200">
                 <div class="icon-box">
@@ -299,6 +311,8 @@
                 </div>
               </div>
             </div>
+
+          {% endcomment %}
 
           </div>
         </section><!-- End Ongoing Projects Section -->
