--- a/RaisingMinds/app/templates/app/index.html
+++ b/RaisingMinds/app/templates/app/index.html
@@ -472,6 +472,8 @@
 
         {% endblock %}
 
+      {% block footer %}
+
         <!-- ======= Footer ======= -->
         <footer id="footer">
 
@@ -539,9 +541,13 @@
           </div>
         </footer><!-- End Footer -->
 
+      {% endblock %}
+
         <!-- Main JS File -->
         <script src="{% static 'app/js/main.js' %}"></script>
         <!-- bootstrap JS CDN link -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
         </body>
+
+    
 </html>
