--- a/RaisingMinds/school_profile/templates/school_profile/school_profile.html
+++ b/RaisingMinds/school_profile/templates/school_profile/school_profile.html
@@ -1,4 +1,7 @@
-<!DOCTYPE html>
+{% extends "app/index.html" %}
+{% load static %}
+{% block title %}| School Profile{% endblock %}
+{% comment %} <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -9,16 +12,19 @@
     <!-- Bootstap CDN link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" /> {% endcomment %}
          <!-- CSS file -->
-    <link rel="stylesheet" type="text/css" href="./school-profile.css" />
+    {% block CSS %} 
+    {{block.super}}    
+    <link rel="stylesheet" href="{% static 'school_profile/css/school_profile.css' %}" />
+    {% endblock %}
     <!-- javascript file -->
-    <script src="./school-profile.js"></script>
-</head>
+    {% comment %} <script src="./school-profile.js"></script> {% endcomment %}
+{% comment %} </head> {% endcomment %}
 
-<body>
+{% comment %} <body> {% endcomment %}
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
+    {% comment %}<nav class="navbar navbar-expand-lg navbar-dark bg-dark  fixed-top padding">
         <div class="container Inpadding ">
             <!-- Logo -->
             <div class="fixedLogo">
@@ -80,6 +86,8 @@
     </nav>
 
     <!-- End of nav bar -->
+    {% endcomment %}
+{% block content %}    
     <br><br><br><br>
     <div class="container" style="display:grid;">
 
@@ -284,10 +292,13 @@
         </aside>
         <br><br>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        {% comment %} <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-            crossorigin="anonymous"></script>
+            crossorigin="anonymous"></script> {% endcomment %}
+        <script src="./school-profile.js"></script>
            
-</body>
+{% comment %} </body> {% endcomment %}
+{% endblock %}
+{% block footer %}{% endblock %}
 
-</html>
+{% comment %} </html> {% endcomment %}
